2011-11-16  Andreas Kirschbaum

	* Properly disable command history access if "enable-history"
	parameter is unset in skin file.

2011-09-21  Andreas Kirschbaum

	* Add missing keybindings for numpad movement.

2011-08-13  Andreas Kirschbaum

	* Update .jnlp file; change default location to
	invidious.meflin.net.

2011-08-04  Andreas Kirschbaum

	* Close book popup dialog on ESC key.

2011-07-24  Andreas Kirschbaum

	* Highlight the active message dialog tab.

2011-07-23  Nicolas Weeger

	* Add quest dialog.

2011-07-05  Andreas Kirschbaum

	* Properly raise dialogs when clicked or moved. Do not randomly
	miss mouse clicks.

	* Add left-clicking a spell to "cast" and middle-clicking to
	"invoke" it. Generally use SHIFT+right button=middle button to
	somewhat help players using a two-button mouse.

2011-07-03  Andreas Kirschbaum

	* Re-enable tabs in messages dialog.

	* Fix keyboard issues. Now /bind accepts all keys and supports all
	modifier combinations. Also allows to enter all possible
	characters in text input fields.

2011-07-02  Andreas Kirschbaum

	* Reliably negotiate map size and ground view size with server
	when the main window is resized.

	* Support left-clicks on arrow buttons in ground view.

	* Prevent the right ground view arrow from vanishing.

2011-07-01  Andreas Kirschbaum

	* Fix glitches in map view. Now the character stays centered while
	running.

2011-06-27  Andreas Kirschbaum

	* Correctly restore pickup mode when switching characters.

2011-06-25  Nicolas Weeger

        * Correctly clear known spells when switching characters.

2011-06-19  Andreas Kirschbaum

	* Support account/character names and passwords with non-US-ASCII
	characters.

2011-06-18  Andreas Kirschbaum

	* Support repeat count in spells dialog.

	* Clear password input field and re-focus the input field if an
	incorrect password is entered during account login.

	* Make middle mouse button emulation (left+right click) work
	again.

	* Reliably update ground view.
